--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Mayank Sheoran</title>
 </head>
 <body>
-    <img src="images/profile.png" alt="Mayank's Profile photo">
+    <img src="IMG/profile.png" alt="Mayank's Profile photo">
     <hr size="3" noshade>
     <h1>Mayank Sheoran</h1>
     <hr size="3" noshade>
